--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -56,8 +56,15 @@ body {
             width: 100%;
         }
 
-        .title, .icon {
+        .title, .icon, .year {
             color: @icon-color;
+        }
+
+        .year {
+            margin-bottom: 10px;
+        }
+        .year ~ .year {
+            margin-top: 1em;
         }
 
         .mobile-title {
